deploy/k8s/10-spark-trending.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ongi-agg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-trending
  namespace: ongi-agg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-trending
  template:
    metadata:
      labels:
        app: recipe-trending
    spec:
      containers:
        - name: recipe-trending
          image: ongi-spark-trending:0.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1Gi"
              cpu: "200m"
            limits:
              memory: "2Gi"
              cpu: "1"
